tests/testcases/invalid/semantic/41_missing_return_if_else_if_chain.ciel
// Error: if-else-if chain without final else, some paths don't return
int categorize(int x) {
    if (x < 0) {
        return -1;
    } else if (x > 0) {
        return 1;
    }
    // Error: what if x == 0? Missing final else or return
}

int main() {
    int result = categorize(0);
    return 0;
}
